# ereline

./: .gitignore  AUTHORS  Makefile.am  Makefile.in  README  README.md  aclocal.m4  config.h.in  configuration.json  configure  configure.ac  data_storage_dx11.json
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
code_tests/: README  ahf_test.cpp  gain_mergeresults_test.cpp  gain_selectrange_test.cpp  notes_to_the_code.md  select_proc_range.cpp  test.cpp
doc/developer_manual/: Doxyfile.in  Makefile.am
doc/user_manual/: Makefile  conf.py  configuration_file.rst  developer_guide.rst  file_formats.rst  index.rst  intro.rst  logging.rst  modules_overview.rst  tutorial.rst
src/: CMakeLists.txt  Makefile.am  Makefile.in  ahf_info.cpp  ahf_info.hpp  configuration.cpp  configuration.hpp  configuration_just_smooth.json  da_capo.cpp  da_capo.hpp  da_capo_results.hpp  data_binning.cpp  data_binning.hpp  data_binning_results.cpp  data_binning_results.hpp  datatypes.cpp  datatypes.hpp  deltavv.cpp  deltavv.hpp  dipole_fit.cpp  dipole_fit.hpp  dipole_fit_results.cpp  dipole_fit_results.hpp  dipole_parameters.cpp  dipole_parameters.hpp  dx11d_pipeline.cpp  ereline_test.cpp  fits_object.cpp  fits_object.hpp  gain_table.cpp  gain_table.hpp  healpix_map.cpp  healpix_map.hpp  io.cpp  io.hpp  logging.cpp  logging.hpp  mademoiselle.cpp  mademoiselle.hpp  misc.cpp  (+22 more)
src/Healpix_3.11/: chealpix.c
src/common/: configuration.cpp  configuration.hpp  logging.cpp  logging.hpp
src/datatypes/: .#detpoint.hpp  calibration_constant.hpp  detpoint.hpp  planck_time.hpp  pointing.hpp  r.hpp
test/: Makefile.am  test_configuration.cpp  test_datatypes.cpp  test_io.cpp  test_logger.cpp  test_misc.cpp  test_project_tod.cpp  test_squeezer.cpp
test/test_data/: configuration_test.js  ucds.db
